trying to fix input zoom on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -340,6 +340,9 @@ background: rgb(250, 246, 246);
 border-top: 4px solid #26303D;
 
 }
+.form-container-mobile h2 {
+letter-spacing: 5px;
+}
 
 .form-container-mobile form {
   display: flex;
@@ -352,7 +355,7 @@ align-items:center;
 .form-container-mobile input {
   font-family: 'Lato', sans-serif;
   margin-top: 10px;
-  font-size: 0.8em;
+  font-size: 1em;
   width: 200px;
 
 
@@ -386,7 +389,7 @@ align-items:center;
   
   color: #726659;
   font-family: 'Lato', sans-serif;
-  font-size: 0.875em;
+  font-size: 1em;
   
   border: solid 0.5px rgb(134, 137, 146);
   border-radius: 1rem;
@@ -638,7 +641,7 @@ margin-right: 5px;
 
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   color: #aca49c;
-  font-size: 0.875em;
+  font-size: 1em;
 }
 
 input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
@@ -647,7 +650,7 @@ input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholde
 
 input::-moz-placeholder, textarea::-moz-placeholder {
   color: #aca49c;
-  font-size: 0.875em;
+  font-size: 1em;
 }
 
 input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
@@ -657,7 +660,7 @@ input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
 
 input::placeholder, textarea::placeholder {
   color: #aca49c;
-  font-size: 0.875em;
+  font-size: 1em;
 }
 
 input:focus::placeholder, textarea::focus:placeholder {
@@ -666,7 +669,7 @@ input:focus::placeholder, textarea::focus:placeholder {
 
 input::-ms-placeholder, textarea::-ms-placeholder {
   color: #aca49c;
-  font-size: 0.875em;
+  font-size: 1em;
 }
 
 input:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
@@ -682,7 +685,7 @@ input:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
 }
 input:hover::-webkit-input-placeholder, textarea:hover::-webkit-input-placeholder {
   color: #e2dedb;
-  font-size: 0.875em;
+  font-size: 1em;
 }
 
 input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-input-placeholder {
@@ -691,7 +694,7 @@ input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-inpu
 
 input:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
   color: #e2dedb;
-  font-size: 0.875em;
+  font-size: 1em;
 }
 
 input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
@@ -700,7 +703,7 @@ input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
 
 input:hover::placeholder, textarea:hover::placeholder {
   color:white;
-  font-size: 0.875em;
+  font-size: 1em;
 }
 
 input:hover:focus::placeholder, textarea:hover:focus::placeholder {
@@ -710,7 +713,7 @@ input:hover:focus::placeholder, textarea:hover:focus::placeholder {
 
 input:hover::placeholder, textarea:hover::placeholder {
   color: #e2dedb;
-  font-size: 0.875em;
+  font-size: 1em;
 }
 
 input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
